# mediadecode

./: .gitmodules  Cargo.toml  README.md  webdriver.json
.cargo/: config.toml
.github/workflows/: ci-core.yml  ci-ffmpeg.yml  ci-webcodecs.yml  ci.yml  loc.yml
docs/superpowers/specs/: 2026-05-08-mediadecode-design.md
mediadecode/: CHANGELOG.md  Cargo.toml  README.md
mediadecode-ffmpeg/: CHANGELOG.md  Cargo.toml  README.md
mediadecode-ffmpeg/benches/: decode.rs
mediadecode-ffmpeg/examples/: decode.rs
mediadecode-ffmpeg/src/: adapter.rs  audio.rs  backend.rs  boundary.rs  buffer.rs  channel_layout.rs  codec_id.rs  convert.rs  decoder.rs  error.rs  extras.rs  ffi.rs  frame.rs  lib.rs  pix_fmt.rs  sample_format.rs  subtitle.rs  video.rs
mediadecode-ffmpeg/src/convert/: mod.rs  tests.rs
mediadecode-ffmpeg/src/decoder/: mod.rs  tests.rs
mediadecode-ffmpeg/src/pixdesc/: mod.rs  tests.rs
mediadecode-ffmpeg/src/video/: mod.rs  tests.rs
mediadecode-ffmpeg/tests/: audio_pcm_fixtures.rs  decode.rs  decode_via_trait.rs  hw_smoke.rs
mediadecode-webcodecs/: CHANGELOG.md  Cargo.toml  README.md
mediadecode-webcodecs/src/: adapter.rs  audio.rs  boundary.rs  buffer.rs  codec_id.rs  codec_string.rs  dispatch.rs  error.rs  extras.rs  lib.rs  sample_format.rs  state.rs  video.rs
mediadecode-webcodecs/tests/: audio_flush_isolation.rs  audio_pcm_fixtures.rs  native_stub.rs
mediadecode/src/: adapter.rs  cfa.rs  channel.rs  color.rs  decoder.rs  frame.rs  lib.rs  packet.rs  pixel_format.rs  subtitle.rs
mediadecode/src/future/: local.rs  mod.rs  send.rs
mediadecode/tests/: loopback.rs
src/: cfa.rs  frame.rs  packet.rs  subtitle.rs
