[workspace]
resolver = "3"
members = [
  "mediadecode",
  "mediadecode-ffmpeg",
  "mediadecode-webcodecs",
]

[workspace.package]
edition      = "2024"
rust-version = "1.95.0"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/findit-ai/mediadecode"
homepage     = "https://github.com/findit-ai/mediadecode"

[workspace.dependencies]
# Workspace-internal crates — referenced by sibling members via workspace inheritance.
mediadecode = { version = "0.3", path = "mediadecode", default-features = false }
mediaframe  = { version = "0.1", default-features = false, features = ["frame"] }

# External deps used by more than one member, pinned at the workspace level.
mediatime   = { version = "0.1", default-features = false }
bitflags    = { version = "2", default-features = false }
derive_more = { version = "2", default-features = false }
thiserror   = { version = "2", default-features = false }
smol_str    = { version = "0.3", default-features = false }
ffmpeg-next = { version = "8.1", default-features = false, features = ["codec", "format"] }
tracing     = { version = "0.1", default-features = false }
libc        = "0.2"

# Browser-only — used by `mediadecode-webcodecs`. Pinned here so the
# whole workspace agrees on a single set of bindings versions.
wasm-bindgen         = { version = "0.2", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
js-sys               = { version = "0.3", default-features = false }
web-sys              = { version = "0.3", default-features = false }
futures-channel      = { version = "0.3", default-features = false, features = ["alloc"] }

# Optional / fuzzing / serialization
serde       = { version = "1", default-features = false, features = ["derive"] }
arbitrary   = { version = "1", default-features = false }
quickcheck  = { version = "1", default-features = false }

# Generates `Send`-bounded variants of `async fn`-in-trait
# definitions; used by `mediadecode::future` to expose both
# `local::*` (`!Send`) and `send::*` (`+ Send`) trait variants
# from a single source. Proc-macro only — zero runtime cost.
trait-variant = "0.1"

# Dev / bench
criterion = "0.8"
tempfile  = "3"

[workspace.lints.rust]
rust_2018_idioms        = "warn"
single_use_lifetimes    = "warn"
unexpected_cfgs         = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  # Set by `.cargo/config.toml` for `wasm32-*` targets and by
  # CI's `RUSTFLAGS`. `web-sys` gates WebCodecs APIs behind it.
  'cfg(web_sys_unstable_apis)',
] }

[profile.bench]
opt-level         = 3
debug             = false
codegen-units     = 1
lto               = 'thin'
incremental       = false
debug-assertions  = false
overflow-checks   = false
rpath             = false
